--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="https://cdn.jsdelivr.net/gh/technonyte00/deltarune@main/">
+  <base href="https://cdn.jsdelivr.net/gh/64daysofstarman/deltarune/">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
 </head>
