--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <base href="https://cdn.jsdelivr.net/gh/64daysofstarman/deltarune/">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="x-icon" href="favicon.png">
 </head>
 <body>
   <div class="logo-container">
